bad/bin_op_lth_array_class.example_compiler_output
ERROR
[1mbad/bin_op_lth_array_class.lat:5:13: [1;31merror: [0;1moperator < is defined only for int values and string values, not `int[]` and `Y`[m
	new int[3] < new Y;
	           [1;32m^[m
